# Eightgine

./: .devclear.py  .devclear.txt  .devinfo.py  .gitattributes  .gitignore  .gitmodules  CMakeBase.cmake  CMakeLists.txt  DUMB.txt  README.md
.github/workflows/: Linux.yml  Windows.yml  build.yml  macOS.yml
BinariesWithEditor/: Launcher  Launcher-Debug  SDL2-2.0.so.0  SDL2-2.0.so.0.3200.8  SDL2-2.0d.so.0
Development/: .cleanup.bat  .gitignore  CMakeBase.cmake  CMakeLists.txt
Development/.github/workflows/: build.yml
Development/Engine/: CMakeLists.txt  Core.cpp  Core.h  Main.h
Development/Engine/Core/: CMakeLists.txt  Main.cpp  Main.h
Development/Engine/Core/include/: CLauncherImpl.hpp  CMain.hpp  CModuleInterface.hpp  CModuleManager.hpp  CModuleRegistry.hpp  Main.hpp  Module.hpp  Platform.hpp
Development/Engine/Core/src/: CMain.cpp  CModuleManager.cpp  CModuleRegistry.cpp  Main.cpp  Module.cpp
Development/Engine/Platform/: CMakeLists.txt
Development/Engine/Platform/include/: PModuleControllerInterface.hpp  PPlatform.hpp
Development/Engine/Platform/include/Platform/: PFileSystemInterface.hpp  PPlatform.hpp
Development/Engine/Platform/optional/: CMakeLists.txt
Development/Engine/Platform/optional/Linux/include/: PFileSystemLinux.hpp  PModuleControllerLinux.hpp
Development/Engine/Platform/optional/Linux/src/: PFileSystemLinux.cpp  PModuleControllerLinux.cpp
Development/Engine/Platform/optional/Windows/include/: PFileSystemWindows.hpp  PModuleControllerWindows.hpp
Development/Engine/Platform/optional/Windows/src/: PFileSystemWindows.cpp  PModuleControllerWindows.cpp
Development/Engine/Platform/optional/macOS/: CMakeLists.txt
Development/Engine/Platform/optional/macOS/include/: PFileSystemMacOS.hpp  PModuleControllerMacOS.hpp
Development/Engine/Platform/optional/macOS/src/: PFileSystemMacOS.cpp  PModuleControllerMacOS.cpp
Development/Engine/Platform/src/: PPlatform.cpp
Development/Engine/Platform/src/Platform/: PPlatform.cpp
Development/Engine/Platform/src/PlatformImpl/Linux/: PFileSystemLinux.cpp  PModuleControllerLinux.cpp
Development/Engine/Platform/src/PlatformImpl/Windows/: PFileSystemWindows.cpp  PModuleControllerWindows.cpp
Development/Engine/Platform/src/PlatformImpl/macOS/: PFileSystemMacOS.cpp  PModuleControllerMacOS.cpp
Development/Game/: CMakeLists.txt  GameModule.cpp  GameModule.hpp  Impl.cpp
EmptyProject.app/Contents/PlugIns/: PlugIns.json
PlugIns/: PlugIns.json
Plugins/: Plugins.json
Resources/: icon.ase  icon.rc
