# [[Root]]
cmake_minimum_required(VERSION 3.16)
project(EmptyProject)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_DEBUG_POSTFIX "-Debug")
set(CMAKE_RELWITHDEBINFO_POSTFIX "-RelWithDebInfo")


# [[Options]]
option(EIGHTGINE_WITH_EDITOR "Build with the Eightgine Editor" ON)
option(EIGHTGINE_WITH_CONSOLE "Build with the Eightgine Console" OFF)
option(BUILD_SHARED_LIBS "Build shared libraies by Default" ON)
option(BUILD_FRAMEWORK "Build Framework bundle for OSX" OFF)


# [[Includes]]
include("${CMAKE_SOURCE_DIR}/CMakeBase.cmake")


# [[Defaults]]
set(ENGINE_DIR_NAME "Engine")
set(GAME_DIR_NAME "Game")

set(PROJECT_DIR_NAME "${PROJECT_NAME}")
set(RESOURCES_DIR_NAME "Resources") # readonly
set(PLUGINS_DIR_NAME "PlugIns") # readonly

set(DEVELOPMENT_DIR_NAME "Development")
set(THIRDPARTY_DIR_NAME "ThirdParty")

if(DEFINED ENV{Eightgine})
    set(EIGHTGINE_DIR "$ENV{Eightgine}")
    string(REPLACE "\\" "/" EIGHTGINE_DIR ${EIGHTGINE_DIR})
else()
    message(FATAL_ERROR "MISSING ENV: Eightgine")
endif()

set(EIGHTGINE_DEVELOPMENT_DIR "${EIGHTGINE_DIR}/${DEVELOPMENT_DIR_NAME}")
set(EIGHTGINE_ENGINE_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(EIGHTGINE_THIRDPARTY_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${THIRDPARTY_DIR_NAME}")

set(PROJECT_DIR "${CMAKE_SOURCE_DIR}")
set(PROJECT_APP_DIR "${PROJECT_DIR}/${PROJECT_NAME}.app/Contents")
set(PROJECT_DEVELOPMENT_DIR "${PROJECT_DIR}/${DEVELOPMENT_DIR_NAME}")
set(PROJECT_ENGINE_DIR "${PROJECT_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(PROJECT_GAME_DIR "${PROJECT_DEVELOPMENT_DIR}/${GAME_DIR_NAME}")
set(PROJECT_THIRDPARTY_DIR "${PROJECT_DEVELOPMENT_DIR}/${THIRDPARTY_DIR_NAME}")

if(EIGHTGINE_PLATFORM_WINDOWS)
    set(PROJECT_BINARIES_RUNTIME_DIR "${PROJECT_APP_DIR}/Windows")
    set(PROJECT_BINARIES_LIBRARY_DIR "${PROJECT_APP_DIR}/Windows")
elseif(EIGHTGINE_PLATFORM_LINUX)
    set(PROJECT_BINARIES_RUNTIME_DIR "${PROJECT_APP_DIR}/Linux")
    set(PROJECT_BINARIES_LIBRARY_DIR "${PROJECT_APP_DIR}/Linux")
elseif(EIGHTGINE_PLATFORM_MACOS)
    set(PROJECT_BINARIES_RUNTIME_DIR "${PROJECT_DIR}")
    set(PROJECT_BINARIES_LIBRARY_DIR "${PROJECT_APP_DIR}/Frameworks")
endif()

set(PROJECT_RESOURCES_DIR "${PROJECT_APP_DIR}/${RESOURCES_DIR_NAME}")
set(PROJECT_PLUGINS_DIR "${PROJECT_APP_DIR}/${PLUGINS_DIR_NAME}")

if(EIGHTGINE_PLATFORM_WINDOWS OR EIGHTGINE_PLATFORM_LINUX)
    set(PROJECT_EXECUTABLE_PATH ".")
elseif(EIGHTGINE_PLATFORM_MACOS)
    set(PROJECT_EXECUTABLE_PATH "@executable_path")
endif()

foreach(POSTFIX "" "_DEBUG" "_RELEASE" "_RELWITHDEBINFO" "_MINSIZEREL")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY${POSTFIX} "${PROJECT_BINARIES_RUNTIME_DIR}")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY${POSTFIX} "${PROJECT_BINARIES_LIBRARY_DIR}")
endforeach()

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) # readonly
set(CMAKE_INSTALL_RPATH "${EIGHTGINE_RPATH}") # readonly

set(ENV{PKG_CONFIG_PATH} "${EIGHTGINE_THIRDPARTY_DIR}")


# [[Definitions]]
if(EIGHTGINE_WITH_EDITOR)
    add_compile_definitions("EIGHTGINE_WITH_EDITOR=1")
else()
    add_compile_definitions("EIGHTGINE_WITH_EDITOR=0")
endif()

if(EIGHTGINE_WITH_CONSOLE)
    add_compile_definitions("EIGHTGINE_WITH_CONSOLE=1")
else()
    add_compile_definitions("EIGHTGINE_WITH_CONSOLE=0")
endif()

add_compile_definitions("EIGHTGINE_PROJECT_EXECUTABLE_DIR=\"${PROJECT_EXECUTABLE_PATH}\"")
add_compile_definitions("EIGHTGINE_PROJECT_RESOURCES_DIR=\"${PROJECT_EXECUTABLE_PATH}/../${RESOURCES_DIR_NAME}\"")
add_compile_definitions("EIGHTGINE_PROJECT_PLUGINS_DIR=\"${PROJECT_EXECUTABLE_PATH}/../${PLUGINS_DIR_NAME}\"")


# [[Subdirectories]]
eightgine_add_symlink(ORIGINAL "${EIGHTGINE_ENGINE_DIR}" LINKNAME "${PROJECT_ENGINE_DIR}")
add_subdirectory("${EIGHTGINE_THIRDPARTY_DIR}" "${CMAKE_BINARY_DIR}/${THIRDPARTY_DIR_NAME}")
add_subdirectory("${PROJECT_ENGINE_DIR}" "${CMAKE_BINARY_DIR}/${ENGINE_DIR_NAME}")
add_subdirectory("${PROJECT_GAME_DIR}")


# [[Binaries]]
set(PROJECT_JAUNCHER_CPP "${CMAKE_BINARY_DIR}/Launcher.cpp")
file(WRITE "${PROJECT_JAUNCHER_CPP}" "#include <Main.h>")

eightgine_add_executable(EXECUTABLE_NAME "${PROJECT_NAME}"
    EXECUTABLE_SOURCES_FILES "${PROJECT_JAUNCHER_CPP}" "${PROJECT_RESOURCES_DIR}/icon.rc"
)


# [[Dependencies]]
eightgine_add_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_NAME}" DEPENDENCY_NAME "EightgineCore")

if(EIGHTGINE_PLATFORM_WINDOWS)
    eightgine_add_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_NAME}" DEPENDENCY_NAME "Platforms-Windows-Executable")
endif()
