# [[Root]]
cmake_minimum_required(VERSION 3.10)
project(Eightgine)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_DEBUG_POSTFIX "-Debug")
set(CMAKE_RELWITHDEBINFO_POSTFIX "-RelWithDebInfo")


# [[Options]]
option(WITH_EDITOR "Build with the Eightgine Editor" ON)


# [[Includes]]
include("${CMAKE_SOURCE_DIR}/CMakeBase.cmake")


# [[Defaults]]
set(ENGINE_DIR_NAME "Engine")
set(GAME_DIR_NAME "Game")
set(RESOURCES_DIR_NAME "Resources")
set(DEVELOPMENT_DIR_NAME "Development")
set(THIRD_PARTY_DIR_NAME "ThirdParty")
set(BINARIES_DIR_NAME "Binaries")

set(EIGHTGINE_DIR "$ENV{Eightgine}")
string(REPLACE "\\" "/" EIGHTGINE_DIR ${EIGHTGINE_DIR})
set(EIGHTGINE_DEVELOPMENT_DIR "${EIGHTGINE_DIR}/${DEVELOPMENT_DIR_NAME}")
set(EIGHTGINE_ENGINE_SOURCES_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(EIGHTGINE_THIRD_PARTY_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${THIRD_PARTY_DIR_NAME}")
set(EIGHTGINE_RESOURCES_DIR "${EIGHTGINE_DIR}/${RESOURCES_DIR_NAME}")

set(PROJECT_DIR "${CMAKE_SOURCE_DIR}/..")
set(PROJECT_BINARIES_DIR "${PROJECT_DIR}/${BINARIES_DIR_NAME}")
set(PROJECT_DEVELOPMENT_DIR "${PROJECT_DIR}/${DEVELOPMENT_DIR_NAME}")
set(PROJECT_GAME_SOURCES_DIR "${PROJECT_DEVELOPMENT_DIR}/${GAME_DIR_NAME}")
set(PROJECT_THIRD_PARTY_DIR "${PROJECT_DEVELOPMENT_DIR}/${THIRD_PARTY_DIR_NAME}")
set(PROJECT_RESOURCES_DIR "${PROJECT_DIR}/${RESOURCES_DIR_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BINARIES_DIR}")

set(PROJECT_GAME_LIBRARY_NAME "${PROJECT_NAME}Module")
set(PROJECT_GAME_LIBRARY_INCLUDE_DIR "${PROJECT_GAME_SOURCES_DIR}")
if(WITH_EDITOR)
    set(PROJECT_GAME_LIBRARY_NAME "${PROJECT_GAME_LIBRARY_NAME}-WithEditor")
endif()

set(EIGHTGINE_CORE_LIBRARY_NAME "EightgineCore")
set(EIGHTGINE_CORE_LIBRARY_INCLUDE_DIR "${EIGHTGINE_ENGINE_SOURCES_DIR}/Core")
if(WITH_EDITOR)
    set(EIGHTGINE_CORE_LIBRARY_NAME "${EIGHTGINE_CORE_LIBRARY_NAME}-WithEditor")
endif()


# [[Defines]]
if(WITH_EDITOR)
    add_compile_definitions(WITH_EDITOR)
endif()

add_compile_definitions(RESOURCES_DIR_RELATIVE_PATH="../${RESOURCES_DIR_NAME}")


# [[Subdirectoris]]
add_subdirectory("${EIGHTGINE_ENGINE_SOURCES_DIR}" "${CMAKE_BINARY_DIR}/${ENGINE_DIR_NAME}")
add_subdirectory("${PROJECT_GAME_SOURCES_DIR}")


# [[Binaries]]
eightgine_add_executable(EXECUTABLE_NAME "${PROJECT_NAME}"
    EXECUTABLE_SOURCE_FILES "${EIGHTGINE_ENGINE_SOURCES_DIR}/Exe.cpp" "${PROJECT_RESOURCES_DIR}/icon.rc"
)

# [[Dependencies]]
eightgine_install_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_NAME}"
    DEPENDENCY_NAME "libc++"
    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/LLVM/bin"
)
eightgine_install_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_NAME}"
    DEPENDENCY_NAME "libunwind"
    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/LLVM/bin"
)
eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_NAME}"
    DEPENDENCY_NAME "${PROJECT_GAME_LIBRARY_NAME}"
    DEPENDENCY_INCLUDE_DIR "${PROJECT_GAME_LIBRARY_INCLUDE_DIR}"
)
