# [[Root]]
cmake_minimum_required(VERSION 3.12)
project(EmptyProject)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_DEBUG_POSTFIX "-Debug")
set(CMAKE_RELWITHDEBINFO_POSTFIX "-RelWithDebInfo")


# [[Options]]
option(WITH_EDITOR "Build with the Eightgine Editor" ON)


# [[Includes]]
include("${CMAKE_SOURCE_DIR}/CMakeBase.cmake")


# [[Defaults]]
set(ENGINE_DIR_NAME "Engine")
set(GAME_DIR_NAME "Game")
set(RESOURCES_DIR_NAME "Resources")
set(DEVELOPMENT_DIR_NAME "Development")
set(PLUGINS_DIR_NAME "Plugins")
set(THIRD_PARTY_DIR_NAME "ThirdParty")
set(PROJECT_LAUNCHER_NAME "Launcher")

set(BINARIES_DIR_NAME "Binaries")
if(WITH_EDITOR)
    set(BINARIES_DIR_NAME "${BINARIES_DIR_NAME}WithEditor")
endif()

if(NOT DEFINED ENV{Eightgine})
    message(FATAL_ERROR "Environment variable 'Eightgine' is not set")
endif()
set(EIGHTGINE_DIR "$ENV{Eightgine}")
string(REPLACE "\\" "/" EIGHTGINE_DIR ${EIGHTGINE_DIR})

set(EIGHTGINE_DEVELOPMENT_DIR "${EIGHTGINE_DIR}/${DEVELOPMENT_DIR_NAME}")
set(EIGHTGINE_ENGINE_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(EIGHTGINE_THIRDPARTY_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${THIRD_PARTY_DIR_NAME}")
set(EIGHTGINE_RESOURCES_DIR "${EIGHTGINE_DIR}/${RESOURCES_DIR_NAME}")

set(PROJECT_DIR "${CMAKE_SOURCE_DIR}/..")
set(PROJECT_BINARIES_DIR "${PROJECT_DIR}/${BINARIES_DIR_NAME}")
set(PROJECT_DEVELOPMENT_DIR "${PROJECT_DIR}/${DEVELOPMENT_DIR_NAME}")
set(PROJECT_ENGINE_DIR "${PROJECT_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(PROJECT_GAME_SOURCES_DIR "${PROJECT_DEVELOPMENT_DIR}/${GAME_DIR_NAME}")
set(PROJECT_THIRDPARTY_DIR "${PROJECT_DEVELOPMENT_DIR}/${THIRD_PARTY_DIR_NAME}")
set(PROJECT_RESOURCES_DIR "${PROJECT_DIR}/${RESOURCES_DIR_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BINARIES_DIR}")


# [[Definitions]]
if(WIN32)
    add_compile_definitions(EIGHTGINE_PLATFORM_WINDOWS)
elseif(UNIX)
    add_compile_definitions(EIGHTGINE_LINUX_PLATFORM)
else()
    message(FATAL_ERROR "Unsupported platform")
endif()

if(WITH_EDITOR)
    add_compile_definitions(WITH_EDITOR)
endif()

add_compile_definitions(
    PROJECT_RESOURCES_DIR="../${RESOURCES_DIR_NAME}"
    PROJECT_PLUGINS_DIR="../${PLUGINS_DIR_NAME}"
)


# [[Subdirectories]]
eightgine_add_symlink(ORIGINAL "${EIGHTGINE_ENGINE_DIR}" LINKNAME "${PROJECT_ENGINE_DIR}")

add_subdirectory("${PROJECT_ENGINE_DIR}" "${CMAKE_BINARY_DIR}/${ENGINE_DIR_NAME}")
add_subdirectory("${PROJECT_GAME_SOURCES_DIR}")


# [[Binaries]]
set(PROJECT_JAUNCHER_CPP "${CMAKE_BINARY_DIR}/Launcher.cpp")
file(WRITE "${PROJECT_JAUNCHER_CPP}" "#include <Main.h>")

eightgine_add_executable(EXECUTABLE_NAME "${PROJECT_LAUNCHER_NAME}"
    EXECUTABLE_SOURCE_FILES "${PROJECT_JAUNCHER_CPP}" "${PROJECT_RESOURCES_DIR}/icon.rc"
)
eightgine_get_target(PROJECT_LAUNCHER_NAME)
target_link_libraries("${DIRTY_PROJECT_LAUNCHER_NAME}" PUBLIC -static-libstdc++ -static-libgcc)

# [[Dependencies]]
#eightgine_install_libcxx_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_LAUNCHER_NAME}")

eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_LAUNCHER_NAME}"
    DEPENDENCY_NAME "EightgineCore"
    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_ENGINE_DIR}/Core"
)
