# [[Root]]
cmake_minimum_required(VERSION 3.16)
project(EmptyProject)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_DEBUG_POSTFIX "-Debug")
set(CMAKE_RELWITHDEBINFO_POSTFIX "-RelWithDebInfo")


# [[Options]]
option(EIGHTGINE_WITH_EDITOR "Build with the Eightgine Editor" ON)
option(BUILD_SHARED_LIBS "Build shared libraies by Default" ON)
option(BUILD_FRAMEWORK "Build Framework bundle for OSX" OFF)


# [[Includes]]
include("${CMAKE_SOURCE_DIR}/CMakeBase.cmake")


# [[Defaults]]
set(ENGINE_DIR_NAME "Engine")
set(GAME_DIR_NAME "Game")
set(RESOURCES_DIR_NAME "Resources")
set(DEVELOPMENT_DIR_NAME "Development")
set(PLUGINS_DIR_NAME "Plugins")
set(THIRDPARTY_DIR_NAME "ThirdParty")
set(PROJECT_LAUNCHER_NAME "Launcher")

set(BINARIES_DIR_NAME "Binaries")
if(EIGHTGINE_WITH_EDITOR)
    set(BINARIES_DIR_NAME "${BINARIES_DIR_NAME}WithEditor")
endif()

if(DEFINED ENV{Eightgine})
    set(EIGHTGINE_DIR "$ENV{Eightgine}")
    string(REPLACE "\\" "/" EIGHTGINE_DIR ${EIGHTGINE_DIR})
else()
    message(FATAL_ERROR "Environment variable 'Eightgine' is not set")
endif()

set(EIGHTGINE_DEVELOPMENT_DIR "${EIGHTGINE_DIR}/${DEVELOPMENT_DIR_NAME}")
set(EIGHTGINE_ENGINE_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(EIGHTGINE_THIRDPARTY_DIR "${EIGHTGINE_DEVELOPMENT_DIR}/${THIRDPARTY_DIR_NAME}")
set(EIGHTGINE_RESOURCES_DIR "${EIGHTGINE_DIR}/${RESOURCES_DIR_NAME}")

set(PROJECT_DIR "${CMAKE_SOURCE_DIR}/..")
set(PROJECT_BINARIES_DIR "${PROJECT_DIR}/${BINARIES_DIR_NAME}")
set(PROJECT_DEVELOPMENT_DIR "${PROJECT_DIR}/${DEVELOPMENT_DIR_NAME}")
set(PROJECT_ENGINE_DIR "${PROJECT_DEVELOPMENT_DIR}/${ENGINE_DIR_NAME}")
set(PROJECT_GAME_DIR "${PROJECT_DEVELOPMENT_DIR}/${GAME_DIR_NAME}")
set(PROJECT_THIRDPARTY_DIR "${PROJECT_DEVELOPMENT_DIR}/${THIRDPARTY_DIR_NAME}")
set(PROJECT_RESOURCES_DIR "${PROJECT_DIR}/${RESOURCES_DIR_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BINARIES_DIR}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BINARIES_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_BINARIES_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BINARIES_DIR}")

set(ENV{PKG_CONFIG_PATH} "${EIGHTGINE_THIRDPARTY_DIR}")


# [[Definitions]]
if(EIGHTGINE_WITH_EDITOR)
    add_compile_definitions("EIGHTGINE_WITH_EDITOR=1")
else()
    add_compile_definitions("EIGHTGINE_WITH_EDITOR=0")
endif()

add_compile_definitions(
    "EIGHTGINE_PROJECT_RESOURCES_DIR=\"../${RESOURCES_DIR_NAME}\""
    "EIGHTGINE_PROJECT_PLUGINS_DIR=\"../${PLUGINS_DIR_NAME}\""
)


# [[Subdirectories]]
eightgine_add_symlink(ORIGINAL "${EIGHTGINE_ENGINE_DIR}" LINKNAME "${PROJECT_ENGINE_DIR}")
add_subdirectory("${EIGHTGINE_THIRDPARTY_DIR}" "${CMAKE_BINARY_DIR}/${THIRDPARTY_DIR_NAME}")
add_subdirectory("${PROJECT_ENGINE_DIR}" "${CMAKE_BINARY_DIR}/${ENGINE_DIR_NAME}")
add_subdirectory("${PROJECT_GAME_DIR}")


# [[Binaries]]
set(PROJECT_JAUNCHER_CPP "${CMAKE_BINARY_DIR}/Launcher.cpp")
file(WRITE "${PROJECT_JAUNCHER_CPP}" "#include <Main.h>")

eightgine_add_executable(EXECUTABLE_NAME "${PROJECT_LAUNCHER_NAME}"
    EXECUTABLE_SOURCES_FILES "${PROJECT_JAUNCHER_CPP}" "${PROJECT_RESOURCES_DIR}/icon.rc"
)


# [[Dependencies]]
eightgine_install_libcxx_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_LAUNCHER_NAME}")
eightgine_add_dependency(MODULE_OR_EXECUTABLE_NAME "${PROJECT_LAUNCHER_NAME}" DEPENDENCY_NAME "EightgineCore")
