# [[Binaries]]
eightgine_find_source_files(OUTPUT PROJECT_GAME_SOURCE_FILES SOURCES_DIR "${CMAKE_CURRENT_LIST_DIR}")
add_library("${PROJECT_GAME_LIBRARY_NAME}" SHARED "${PROJECT_GAME_SOURCE_FILES}")


# [[Dependencies]]
eightgine_set_target_dependency(TARGET_NAME "${PROJECT_GAME_LIBRARY_NAME}"
    DEPENDENCY_NAME "${EIGHTGINE_CORE_LIBRARY_NAME}"
    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_CORE_LIBRARY_INCLUDE_DIR}"
)
