# [[Binaries]]
eightgine_find_source_files(OUTPUT EIGHTGINE_CORE_SOURCE_FILES SOURCES_DIR "${CMAKE_CURRENT_LIST_DIR}")
add_library("${EIGHTGINE_CORE_LIBRARY_NAME}" SHARED "${EIGHTGINE_CORE_SOURCE_FILES}")


# [[Dependencies]]
eightgine_set_target_dependency(TARGET_NAME "${EIGHTGINE_CORE_LIBRARY_NAME}"
    DEPENDENCY_NAME "SDL2"
    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/include"
    DEPENDENCY_LIB_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/lib"
    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/bin"
)
