# [[Binaries]]
eightgine_add_module(MODULE_NAME "EightgineCore"
    MODULE_SOURCES_DIR "${CMAKE_CURRENT_LIST_DIR}"
    MODULE_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}"
)

message(WARNING "CHECKHERE---->: ${CMAKE_BINARY_DIR}/${THIRD_PARTY_DIR_NAME}/cJSON")
add_subdirectory("${EIGHTGINE_THIRD_PARTY_DIR}/cJSON" "${CMAKE_BINARY_DIR}/${THIRD_PARTY_DIR_NAME}/cJSON")
# eightgine_add_module(MODULE_NAME "cJSON"
#     MODULE_SOURCES_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/src"
#     MODULE_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/include" "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/include/cJSON"
#     # MODULE_PRIVATE_DEFINITIONS CJSON_EXPORT_SYMBOLS
#     # MODULE_INTERFACE_DEFINITIONS CJSON_IMPORT_SYMBOLS
#     MODULE_PRIVATE_DEFINITIONS CJSON_HIDE_SYMBOLS
#     MODULE_TYPE STATIC
# )
# # eightgine_add_module(MODULE_NAME "cJSON"
# #     MODULE_SOURCES_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/src"
# #     MODULE_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/include" "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/include/cJSON"
# #     MODULE_PRIVATE_DEFINITIONS CJSON_EXPORT_SYMBOLS
# #     MODULE_INTERFACE_DEFINITIONS CJSON_IMPORT_SYMBOLS
# #     # MODULE_PRIVATE_DEFINITIONS CJSON_HIDE_SYMBOLS
# #     # MODULE_TYPE STATIC
# # )

eightgine_add_module(MODULE_NAME "Automation"
    MODULE_SOURCES_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/Automation/src"
    MODULE_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/Automation/include"
)

# [[Dependencies]]
eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "EightgineCore"
    DEPENDENCY_NAME "SDL2"
    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/include" "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/include/SDL2"
    DEPENDENCY_LIB_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/lib"
    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2/bin"
)

eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "EightgineCore"
    DEPENDENCY_NAME "SDL2_image"
    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2_image/include" "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2_image/include/SDL2"
    DEPENDENCY_LIB_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2_image/lib"
    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/SDL2_image/bin"
)

eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "EightgineCore"
    DEPENDENCY_NAME "glfw3"
    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/GLFW/include"
    DEPENDENCY_LIB_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/GLFW/lib"
    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/GLFW/bin"
)

eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "EightgineCore"
    DEPENDENCY_NAME "Automation"
)

eightgine_link_dependency(MODULE_OR_EXECUTABLE_NAME "EightgineCore"
    DEPENDENCY_NAME "cJSON"
#    DEPENDENCY_INCLUDE_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/include" "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/include/cJSON"
#    DEPENDENCY_LIB_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/lib"
#    DEPENDENCY_BIN_DIR "${EIGHTGINE_THIRD_PARTY_DIR}/cJSON/bin"
)
